test/fixtures/install-consumer/negative/forbidden_mailbox.ml
(** This fixture must not compile from an installed [temporal-sdk] package. *)

module Private = Mailbox_processor

let () = ()
